--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
     "name": "laravel-enso/datatable",
-    "description": "DataTable builder for DataTable.net jQuery library",
-    "type": "dependency",
+    "description": "DataTable package for the DataTables.net library with server-side processing and a VueJS component",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "mishu",
+            "name": "Mishu",
             "email": "mishu@xtelecom.ro"
         }
     ],
     "require": {
-         "php": ">=5.6.4",
+        "php": ">=7.1.0",
         "laravel/framework": "5.4.*",
+        "laravel-enso/helpers": "1.1.*",
         "nesbot/carbon": "^1.0"
     },
     "autoload": {
