--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": ">=7.1.0",
         "laravel/framework": "5.4.*",
         "laravel-enso/helpers": "1.2.*",
-        "maatwebsite/excel": "^2.1"
+        "maatwebsite/excel": "^2.1",
+        "laravel-enso/vueadminlte": "^1.0"
     },
     "autoload": {
         "psr-4": {
