--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,12 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": "5.4.*",
-        "laravel-enso/helpers": "1.2.*",
-        "maatwebsite/excel": "^2.1",
-        "laravel-enso/vueadminlte": "^1.0"
+        "laravel/framework": "5.5.*",
+        "laravel-enso/core": "1.3.*",
+        "laravel-enso/helpers": "1.3.*",
+        "laravel-enso/vueadminlte": "^1.3",
+        "maatwebsite/excel": "^2.1"
+
     },
     "autoload": {
         "psr-4": {
