--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "laravel/framework": "5.5.*",
         "laravel-enso/core": "1.3.*",
         "laravel-enso/helpers": "1.3.*",
-        "laravel-enso/vueadminlte": "^1.3",
+        "laravel-enso/vueadminlte": "1.3.*",
         "maatwebsite/excel": "^2.1"
 
     },
@@ -36,7 +36,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "LaravelEnso\\DataTableServiceProvider"
+                "LaravelEnso\\DataTable\\DataTableServiceProvider"
             ],
             "aliases": {}
         }
