--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "LaravelEnso\\DataTableServiceProvider"
+                "LaravelEnso\\DataTable\\DataTableServiceProvider"
             ],
             "aliases": {}
         }
